// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedText (P0.2) matches the variant gallery snapshot in dark mode 1`] = `
<View>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 30,
          "fontWeight": "700",
          "lineHeight": 45,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    display
  </Text>
  <Text
    accessibilityRole="header"
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 24,
          "fontWeight": "700",
          "lineHeight": 36,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    h1
  </Text>
  <Text
    accessibilityRole="header"
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 20,
          "fontWeight": "600",
          "lineHeight": 30,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    h2
  </Text>
  <Text
    accessibilityRole="header"
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 18,
          "fontWeight": "600",
          "lineHeight": 28,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    h3
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    body
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 16,
          "fontWeight": "700",
          "lineHeight": 24,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    bodyBold
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    caption
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 14,
          "fontWeight": "700",
          "lineHeight": 21,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    captionBold
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#C1440E",
          "fontSize": 20,
          "fontWeight": "700",
          "lineHeight": 30,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    amount
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#C1440E",
          "fontSize": 28,
          "fontWeight": "700",
          "lineHeight": 42,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    amountLarge
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#B91C1C",
          "fontSize": 20,
          "fontWeight": "700",
          "lineHeight": 30,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    amountNegative
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 13,
          "fontWeight": "500",
          "lineHeight": 18,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#F2EDE8",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 16,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    captionSmall
  </Text>
</View>
`;

exports[`ThemedText (P0.2) matches the variant gallery snapshot in light mode 1`] = `
<View>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 30,
          "fontWeight": "700",
          "lineHeight": 45,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    display
  </Text>
  <Text
    accessibilityRole="header"
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 24,
          "fontWeight": "700",
          "lineHeight": 36,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    h1
  </Text>
  <Text
    accessibilityRole="header"
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 20,
          "fontWeight": "600",
          "lineHeight": 30,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    h2
  </Text>
  <Text
    accessibilityRole="header"
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 18,
          "fontWeight": "600",
          "lineHeight": 28,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    h3
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    body
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 16,
          "fontWeight": "700",
          "lineHeight": 24,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    bodyBold
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    caption
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 14,
          "fontWeight": "700",
          "lineHeight": 21,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    captionBold
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#C1440E",
          "fontSize": 20,
          "fontWeight": "700",
          "lineHeight": 30,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    amount
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#C1440E",
          "fontSize": 28,
          "fontWeight": "700",
          "lineHeight": 42,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    amountLarge
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#B91C1C",
          "fontSize": 20,
          "fontWeight": "700",
          "lineHeight": 30,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    amountNegative
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 13,
          "fontWeight": "500",
          "lineHeight": 18,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    label
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#1A1412",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 16,
          "opacity": undefined,
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    captionSmall
  </Text>
</View>
`;
